<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootViewCL"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/committedAtHeaderTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/committed_at"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/committedAtTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/committedAtHeaderTV"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="12.01.2019 12:23" />

    <TextView
        android:id="@+id/deletionsHeaderTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/deletions"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/committedAtHeaderTV" />

    <TextView
        android:id="@+id/deletionsTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/deletionsHeaderTV"
        app:layout_constraintTop_toBottomOf="@id/committedAtHeaderTV"
        tools:text="140" />

    <TextView
        android:id="@+id/additionsHeaderTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/additions"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deletionsHeaderTV" />

    <TextView
        android:id="@+id/additionsTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/additionsHeaderTV"
        app:layout_constraintTop_toBottomOf="@id/deletionsHeaderTV"
        tools:text="36" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>